fix in navigation link spacing

--- a/src/components/Layout/MainHeader.module.css
+++ b/src/components/Layout/MainHeader.module.css
@@ -30,7 +30,7 @@
   /* display: table; */
   display: inline-block;
   justify-content: space-between;
-  margin-left: 4rem;
+  margin: 0 2rem;
   font-size: 1.25rem;
 }
 
